fix delete button of labels not centered

--- a/src/client/less/Tooltip.less
+++ b/src/client/less/Tooltip.less
@@ -148,7 +148,7 @@
 
                 .slotted > .close {
                     position: absolute;
-                    top: 50%;
+                    top: 25%;
                     right: 5px;
                     transform: translate(0, -50%);
                     border-radius: 50px;
